test/scc_test/decl/semantic-errors/037.t
union A
{
    int x;
};

enum A
{
    B
};
